--- a/index.html
+++ b/index.html
@@ -1,53 +1,34 @@
-<!DOCTYPE html> <!-- Esto es HTML5 -->
-<!-- HTML: Idioma por pagina -->
+<!doctype html>
 <html lang="es">
-	<!-- Etiquetas necesarias que no son contenido -->
-	<head>
-		<!-- Atributo: codificación -->
-		<meta charset="utf-8" />
-		<!-- Titulo de la pagina: entre 60 a 70 caracteres -->
-		<title>Frontend: esta es la pagina principal</title>
-		<!-- Descripción: entre 155 a 160 caracteres -->
-		<meta name="description" content="Curso de Frontend online" />
-		<!-- Keywords: entre 300 caracteres -->
-		<meta name="keywords" content="html, css, backbone, django, node" />
-	</head>
-	<!-- Contenido HTML -->
-	<body>
-		<!-- Cabecera -->
-		<header>
-			<figure id="logo">
-				<img src="https://yahoov4s1-a.akamaihd.net/sj/2196/2358758936_c928ef7401.jpg" />
-			</figure>
-			<h1>Curso de Frontend</h1>
-			<!-- Menu de navegación -->
-			<nav>
-				<li><a href="#">HTML</a></li>
-				<li><a href="#">CSS</a></li>
-				<li><a href="#">Backbone</a></li>
-				<li><a href="#">Django</a></li>
-				<li><a href="#">Node.js</a></li>
-			</nav>
-		</header>
-		<!-- Contenido -->
-		<section>
-			<!-- Articulo -->
-			<article class="item">
-				<figure class="figure_item">
-					<img src="http://farm5.staticflickr.com/4054/4514904944_c03254f204_z.jpg" />
-				</figure>
-				<h2 class="title_item">
-					<a href="#">Título</a>
-				</h2>
-				<div class="data_item">
-					<span>Texto descriptivo</span>
-				</div>
-			</article>
-		</section>
-		<!-- Pie de pagina -->
-		<footer>
-			<strong>Mejorando.la</strong>
-			<p>Texto de parrafo</p>
-		</footer>
-	</body>
+<head>
+	<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+	<title>Blog de Foundation</title>
+    <link rel="stylesheet" href="foundation/css/foundation.css" />
+    <script src="foundation/js/vendor/modernizr.js"></script>
+</head>
+<body>
+	<section>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</section>
+	<section>
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	</section>
+
+	<script src="foundation/js/vendor/jquery.js"></script>
+    <script src="foundation/js/foundation.min.js"></script>
+    <script>
+      $(document).foundation();
+    </script>
+</body>
 </html>
