Una o dos horas han pasado, minúto 36
Estoy aprendiendo mucho con este primer video del curso de Frontend, y
lo mejor es que por ahora lo entiendo todo bastante bien, espero que
sigamos por ese camino :)

--- a/index.html
+++ b/index.html
@@ -8,23 +8,79 @@
     <script src="foundation/js/vendor/modernizr.js"></script>
 </head>
 <body>
-	<section>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	<header class="row">
+		<h1>Entre Github y la primera clase de Frontend</h1>
+    </header>
+
+	<section class="row">
+		<section class="small-12 medium-8 large-7 columns">
+			<article class="row panel">
+			<h2>ARTICULO 1</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
-	</section>
-	<section>
-		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+			<article class="row panel">
+			<h2>ARTICULO 2</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+			</article>
+	    </section>
+
+		<section class="small-12 medium-4 large-4 columns">
+			<section class="row" data-equalizer>
+				<article class="small-6 columns panel" data-equalizer-watch>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut.  anim id est laborum.</p>
+		<a href="#" class="button">Boton</a>
+				</article>
+				<article class="small-6 columns panel" data-equalizer-watch>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</article>
+			</section>
+			<section class="row" data-equalizer>
+				<article class="small-6 columns panel" data-equalizer-watch>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+				</article>
+				<article class="small-6 columns panel" data-equalizer-watch>
+					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut.</p>
+				</article>		
+			</section>
+	    </section>
 	</section>
 
+<!--
+	<section class="row">
+		<article class="small-6 columns">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	    </article>
+		<article class="small-6 columns">
+		Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+	    </article>
+	</section>
+-->
 	<script src="foundation/js/vendor/jquery.js"></script>
     <script src="foundation/js/foundation.min.js"></script>
     <script>
