hasta aquí, me vale para bono
me vale para plantilla de bono

--- a/index.html
+++ b/index.html
@@ -10,6 +10,36 @@
 <body>
 	<header class="row">
 		<h1>Entre Github y la primera clase de Frontend</h1>
+		<nav class="top-bar" data-topbar> 
+			<ul class="title-area"> 
+				<li class="name"> 
+					<h1><a href="#">Bono</a></h1> 
+				</li> 
+				<li class="toggle-topbar menu-icon">
+					<a href="#">Menu</a>
+				</li> 
+			</ul> 
+			<section class="top-bar-section"> <!-- Right Nav Section --> 
+				<ul class="right"> 
+					<li class="active">
+						<a href="#">Right Button Active</a>
+					</li> 
+					<li class="has-dropdown"> 
+						<a href="#">Right Button Dropdown</a> 
+						<ul class="dropdown"> 
+							<li>
+								<a href="#">First link in dropdown</a>
+							</li> 
+						</ul> 
+					</li> 
+				</ul> <!-- Left Nav Section --> 
+				<ul class="left"> 
+					<li>
+						<a href="#">Left Nav Button</a>
+					</li> 
+				</ul> 
+			</section> 
+		</nav>
     </header>
 
 	<section class="row">
@@ -22,6 +52,7 @@
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<a href="#" class="button">Ver Review</a>
 			</article>
 			<article class="row panel">
 			<h2>ARTICULO 2</h2>
@@ -31,6 +62,7 @@
 		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<a href="#" class="button radius">Ver Review</a>
 			</article>
 	    </section>
 
@@ -39,7 +71,6 @@
 				<article class="small-6 columns panel" data-equalizer-watch>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 		tempor incididunt ut.  anim id est laborum.</p>
-		<a href="#" class="button">Boton</a>
 				</article>
 				<article class="small-6 columns panel" data-equalizer-watch>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
