--- a/index.html
+++ b/index.html
@@ -11,18 +11,19 @@
 	<header class="row">
 		<h1>Entre Github y la primera clase de Frontend</h1>
 		<nav class="top-bar" data-topbar> 
+
 			<ul class="title-area"> 
-				<li class="name"> 
-					<h1><a href="#">Bono</a></h1> 
-				</li> 
+				<li class="name"></li>
 				<li class="toggle-topbar menu-icon">
 					<a href="#">Menu</a>
 				</li> 
 			</ul> 
-			<section class="top-bar-section"> <!-- Right Nav Section --> 
+
+			<section class="top-bar-section"> 
+
 				<ul class="right"> 
 					<li class="active">
-						<a href="#">Right Button Active</a>
+						<a href="#">Boton activo</a>
 					</li> 
 					<li class="has-dropdown"> 
 						<a href="#">Right Button Dropdown</a> 
@@ -33,11 +34,13 @@
 						</ul> 
 					</li> 
 				</ul> <!-- Left Nav Section --> 
+
 				<ul class="left"> 
 					<li>
 						<a href="#">Left Nav Button</a>
 					</li> 
 				</ul> 
+
 			</section> 
 		</nav>
     </header>
