--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Blog de Foundation</title>
+	<title>BonoBienvenida.es</title>
     <link rel="stylesheet" href="foundation/css/foundation.css" />
     <script src="foundation/js/vendor/modernizr.js"></script>
 </head>
 <body>
 	<header class="row">
-		<h1>Entre Github y la primera clase de Frontend</h1>
+		<h1>Bono Bienvenida Casas de Apuestas Deportivas</h1>
 		<nav class="top-bar" data-topbar> 
 
 			<ul class="title-area"> 
