--- a/basicos-frontend-semantica-estilos/index-2.html
+++ b/basicos-frontend-semantica-estilos/index-2.html
@@ -6,9 +6,9 @@
 		<meta name="description" content="Curso de Frontend online" />
 		<meta name="keywords" content="html, css, backbone, django, node" />
 		<!-- Hoja de estilos para normalizar los estilos -->
-		<link type='text/css' rel='stylesheet' href='normalize.css'>
+		<link type='text/css' rel='stylesheet' href='normalize.css' />
 		<!-- Hoja de estilos en un link -->
-		<link type='text/css' rel='stylesheet' href='style.css'>
+		<link type='text/css' rel='stylesheet' href='style.css' />
 		<!-- Hoja de estilos en el HTML -->
 		<style>
 			etiqueta{
@@ -38,6 +38,7 @@
 			</figure>
 			<h1>Curso de Frontend</h1>
 		</header>
+	
 		<nav>
 			<li><a href="#">HTML</a></li>
 			<li><a href="#">CSS</a></li>
