--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>BonoBienvenida.es</title>
-    <link rel="stylesheet" href="foundation/css/foundation.css" />
+    <meta name="description" content="Bono bienvenida es la mejor y exclusiva selección de bonos de apuestas por internet, realiza tus apuestas deportivas por internet con las mejores promociones.">
+    <link rel="stylesheet" href="foundation/css/foundation.css" /> 
     <script src="foundation/js/vendor/modernizr.js"></script>
 </head>
 <body>
 	<header class="row">
-		<h1>Bono Bienvenida Casas de Apuestas Deportivas</h1>
+		<h1 id="titular">Bono Bienvenida Casas de Apuestas Deportivas</h1>
 		<nav class="top-bar" data-topbar> 
 
 			<ul class="title-area"> 
