--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 	<title>BonoBienvenida.es</title>
     <meta name="description" content="Bono bienvenida es la mejor y exclusiva selección de bonos de apuestas por internet, realiza tus apuestas deportivas por internet con las mejores promociones.">
+    <link href="http://bonobienvenida.es" rel="canonical" title="BonoBienvenida.es" />
     <link rel="stylesheet" href="foundation/css/foundation.css" /> 
     <script src="foundation/js/vendor/modernizr.js"></script>
 </head>
 <body>
 	<header class="row">
-		<h1 id="titular">Bono Bienvenida Casas de Apuestas Deportivas</h1>
+		<h1 id="titular">Bono Bienvenida -Tus Bonos para Apuestas Deportivas en Internet</h1>
+		<img src="http://bonobienvenida.es/logo-bonobienvenida1.png" alt="Bono Bienvenida Apuestas Deportivas" />
 		<nav class="top-bar" data-topbar> 
 
 			<ul class="title-area"> 
@@ -38,7 +40,7 @@
 
 				<ul class="left"> 
 					<li>
-						<a href="#">Left Nav Button</a>
+						<a href="http://bonobienvenida.es">Bono de Bienvenida</a>
 					</li> 
 				</ul> 
 
@@ -47,26 +49,15 @@
     </header>
 
 	<section class="row">
-		<section class="small-12 medium-8 large-7 columns">
+		<section class="small-12 medium-8 large-8 columns">
 			<article class="row panel">
-			<h2>ARTICULO 1</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<a href="#" class="button">Ver Review</a>
+		<p>Ahora mismo, estás en el Oasis de <strong>Bonos de Bienvenida para Apuestas Deportivas por Internet</strong>, desde <a href="http://bonobienvenida.es">bonobienvenida.es</a>, encontrarás las mejores promociones a la hora de abrir una cuenta en las diversas casas de apuestas que existen para los diversos paises que forman parte de nuestra base de datos, generalmente todas las casas de apuestas que tengan licencia para operar en España y Latinoamérica.</p>
+		<a href="#" class="button">Quienes Somos?</a>
 			</article>
 			<article class="row panel">
-			<h2>ARTICULO 2</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-		quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-		consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-		cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<a href="#" class="button radius">Ver Review</a>
+			<h2>Bono Bienvenida Bet365</h2>
+		<p>Probablemente la Mejor Casa de Apuestas Deportivas de todo el mundo, y en especial para los usuarios de España y paises de toda Latinoamérica, México, Sudamérica, Centroamérica, especial atención a los clientes de habla Hispana y un bono de bienvenida del 100% en tu primer ingreso hasta los 100€ o dolares si estás en Latinoamérica.</p>
+		<a href="#" class="button success radius">Ver Bono Bet365</a> <a href="#" class="button alert radius">Abrir Cuenta Bet365</a>
 			</article>
 	    </section>
 
@@ -78,8 +69,7 @@
 				</article>
 				<article class="small-6 columns panel" data-equalizer-watch>
 					<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-		tempor incididunt ut. Excepteur sint occaecat cupidatat non
-		proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		tempor incididunt ut. Excepteur sint occaecat cupidatat non.</p>
 				</article>
 			</section>
 			<section class="row" data-equalizer>
